--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "jest --runInBand --detectOpenHandles",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "test": "jest --detectOpenHandles",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,9 +21,13 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testMatch": [
+      "**/__tests__/**/*.js",
+      "**/?(*.)+(test).js"
+    ]
   }
 }
